adjacency list status should be table status, to quickly filter on active Tables restrict max concurrent games so query doesnt get too big move logic for filtering active tables to repo to benefit from efficient querying